<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_resultado"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="420dp" />

    <EditText
        android:id="@+id/txt_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_number1"
        android:inputType="number"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="43dp" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_number2"
        android:inputType="number"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="103dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Calcular"
        android:text="@string/button"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="341dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="180dp">

        <RadioButton
            android:id="@+id/radio_sumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1_sumar" />

        <RadioButton
            android:id="@+id/radio_restar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2_restar" />

        <RadioButton
            android:id="@+id/radio_multiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3_multiplicar" />

        <RadioButton
            android:id="@+id/radio_dividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4_dividir" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>